syntax = "proto3";

package protoapp;

option java_package = "io.github.arthurkun.generic.datastore.proto.app.wire";

message AppConfig {
  string app_name = 1;
  int32 max_retries = 2;
  bool debug_mode = 3;
  double refresh_interval = 4;
  NetworkConfig network = 5;

  message NetworkConfig {
    string base_url = 1;
    int32 timeout_ms = 2;
    RetryPolicy retry_policy = 3;

    message RetryPolicy {
      int32 max_attempts = 1;
      int64 backoff_ms = 2;
      bool exponential = 3;
    }
  }
}
